feat: Hoàn thiện API cho Trang Sản phẩm và Danh mục
Commit này giới thiệu các tính năng cốt lõi cho trang danh mục và chi tiết sản phẩm, đồng thời tái cấu trúc và tối ưu hóa toàn diện dự án.

**Tính năng mới:**
- **API Chi tiết Sản phẩm (`GET /products/{slug}`):**
  - Lấy toàn bộ thông tin sản phẩm, bao gồm mô tả HTML, danh sách hình ảnh, và các thuộc tính chi tiết (nhà sản xuất, đóng gói,...).
  - Tính toán tổng số lượng tồn kho (`totalStockQuantity`) từ các lô hàng (`product_batches`).
- **API Sản phẩm Liên quan (`GET /products/{slug}/related`):**
  - Gợi ý danh sách các sản phẩm khác trong cùng danh mục.
- **API Cấu trúc Danh mục (`GET /categories/{slug}`):**
  - Lấy thông tin một danh mục và các danh mục con trực tiếp của nó.
- **Nâng cấp API Tìm kiếm (`POST /products/search`):**
  - Bổ sung validation chặt chẽ cho các tham số đầu vào (pagination, sorting, slug).
  - Mở quyền truy cập public cho API này trong `SecurityConfig`.

**Tái cấu trúc & Tối ưu hóa (Refactor & Perf):**
- **Tối ưu Exception Handling:**
  - `GlobalExceptionHandler` được nâng cấp để sử dụng SLF4J Logger thay vì `printStackTrace()`.
  - Handler cho `MethodArgumentNotValidException` giờ đây trả về một Map chứa *tất cả* các lỗi validation, giúp frontend hiển thị toàn bộ lỗi cho người dùng một lần.
- **Tối ưu Service Layer:**
  - Áp dụng `@Transactional(readOnly = true)` cho tất cả các phương thức GET để cải thiện hiệu suất đọc từ CSDL.
  - Tái cấu trúc các hàm mapping DTO, sử dụng `.toList()` (Java 16+) và các phương thức khởi tạo của DTO để code sạch hơn.
  - Thêm các kiểm tra null-safe (`Optional.ofNullable`) để ngăn chặn `NullPointerException` khi xử lý các collection (images, attributes).
- **Sửa lỗi `MultipleBagFetchException`:**
  - Tách câu lệnh query `findBySlugWithDetails` thành hai truy vấn riêng biệt để fetch `images` và `attributes`, giải quyết triệt để lỗi kinh điển của Hibernate khi fetch nhiều collection cùng lúc.
- **Cải thiện Entity:**
  - Ghi đè phương thức `equals()` và `hash